--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
+    "@angular/common": "^14.3.0",
     "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.2.0",
-    "rxjs": "~7.5.0",
+    "@bakelor/iframe-bridge": "^6.0.1",
+    "@ngx-translate/core": "^14.0.0",
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
